cmake_minimum_required(VERSION 3.23)
project(leetcode)

set(CMAKE_CXX_STANDARD 14)

add_executable(leetcode main.cpp)

add_executable(828 leetcode/828.cpp)
add_executable(tuse interview/tuse.cpp)
add_executable(828_acm leetcode/828_acm.cpp)
add_executable(t238894 luogu/t238894.cpp)
add_executable(t226082 luogu/t226082.cpp)
add_executable(t236282 luogu/t236282.cpp)
add_executable(t219365 luogu/t219365.cpp)
add_executable(4503 acwing/zhousai/4503.cpp)
add_executable(4504 acwing/zhousai/4504.cpp)
add_executable(4505 acwing/zhousai/4505.cpp)
add_executable(t258478 luogu/t258478.cpp)
add_executable(t258573 luogu/t258573.cpp)
add_executable(t258480 luogu/t258480.cpp)
add_executable(143 acwing/Trie/143.cpp)
add_executable(dianxin interview/dianxin.cpp)
add_executable(yichang_data interview/yichang_data.cpp)
add_executable(aaa interview/aaa.cpp)
add_executable(test interview/test.cpp)
add_executable(kapai_game interview/kapai_game.cpp)